make components attachable again